--- a/package.json
+++ b/package.json
@@ -12,15 +12,21 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/drawer": "^6.3.1",
+    "@react-navigation/material-top-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.1.1",
     "react": "17.0.2",
     "react-native": "0.67.4",
     "react-native-gesture-handler": "^2.3.2",
+    "react-native-navigation": "^7.26.0",
     "react-native-reanimated": "^2.4.1",
     "react-native-safe-area-context": "^4.2.1",
     "react-native-screens": "^3.13.1",
+    "react-native-side-menu": "^1.1.3",
+    "react-native-tab-view": "^3.1.1",
     "react-native-windows": "0.67.4"
   },
   "devDependencies": {
@@ -35,6 +41,9 @@
     "react-test-renderer": "17.0.2"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "setupFiles": [
+      "./node_modules/react-native-gesture-handler/jestSetup.js"
+    ]
   }
 }
