--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.1.1",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-native": "0.67.4",
     "react-native-calendars": "^1.1282.0",
@@ -26,6 +27,7 @@
     "react-native-reanimated": "^2.4.1",
     "react-native-safe-area-context": "^4.2.1",
     "react-native-screens": "^3.13.1",
+    "react-native-segmented-control-tab": "^4.0.0",
     "react-native-side-menu": "^1.1.3",
     "react-native-tab-view": "^3.1.1",
     "react-native-windows": "0.67.4"
