--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "windows": "react-native run-windows"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/drawer": "^6.3.1",
@@ -18,6 +19,9 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.1.1",
+    "expo-app-loading": "^2.0.0",
+    "expo-font": "^10.1.0",
+    "inter-ui": "^3.19.3",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-native": "0.67.4",
