--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.1.1",
+    "apisauce": "^2.1.5",
+    "axios": "^0.27.2",
     "expo-app-loading": "^2.0.0",
     "expo-font": "^10.1.0",
     "inter-ui": "^3.19.3",
