--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-segmented-control-tab": "^4.0.0",
     "react-native-side-menu": "^1.1.3",
     "react-native-tab-view": "^3.1.1",
+    "react-native-table-component": "^1.2.2",
     "react-native-windows": "0.67.4"
   },
   "devDependencies": {
