--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.4.1",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/material-top-tabs": "^6.2.1",
@@ -28,7 +29,9 @@
     "react": "17.0.2",
     "react-native": "0.67.4",
     "react-native-calendars": "^1.1282.0",
+    "react-native-custom-picker": "^0.4.0",
     "react-native-gesture-handler": "^2.3.2",
+    "react-native-modal": "^13.0.1",
     "react-native-navigation": "^7.26.0",
     "react-native-reanimated": "^2.4.1",
     "react-native-safe-area-context": "^4.2.1",
