--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.27.2",
     "expo-app-loading": "^2.0.0",
     "expo-font": "^10.1.0",
+    "faker": "^6.6.6",
     "inter-ui": "^3.19.3",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
@@ -31,6 +32,7 @@
     "react-native-calendars": "^1.1282.0",
     "react-native-custom-picker": "^0.4.0",
     "react-native-gesture-handler": "^2.3.2",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-modal": "^13.0.1",
     "react-native-navigation": "^7.26.0",
     "react-native-reanimated": "^2.4.1",
@@ -40,7 +42,9 @@
     "react-native-side-menu": "^1.1.3",
     "react-native-tab-view": "^3.1.1",
     "react-native-table-component": "^1.2.2",
-    "react-native-windows": "0.67.4"
+    "react-native-vector-icons": "^9.1.0",
+    "react-native-windows": "0.67.4",
+    "recoil": "^0.7.3-alpha.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
