--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/stack": "^6.1.1",
     "apisauce": "^2.1.5",
     "axios": "^0.27.2",
+    "axios-auth-refresh": "^3.3.1",
     "expo-app-loading": "^2.0.0",
     "expo-font": "^10.1.0",
     "faker": "^6.6.6",
@@ -33,6 +34,7 @@
     "react-native-custom-picker": "^0.4.0",
     "react-native-gesture-handler": "^2.3.2",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-keychain": "^8.0.0",
     "react-native-modal": "^13.0.1",
     "react-native-navigation": "^7.26.0",
     "react-native-reanimated": "^2.4.1",
