--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^9.1.0",
     "react-native-windows": "0.67.4",
-    "recoil": "^0.7.3-alpha.2"
+    "react-redux": "^8.0.2",
+    "recoil": "^0.7.3-alpha.2",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
