--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.1.1",
+    "@reduxjs/toolkit": "^1.8.2",
     "apisauce": "^2.1.5",
     "axios": "^0.27.2",
     "axios-auth-refresh": "^3.3.1",
